Everything related to identity and login,logout,register page UI

--- a/WebApp/Areas/Identity/Pages/_ViewImports.cshtml
+++ b/WebApp/Areas/Identity/Pages/_ViewImports.cshtml
@@ -1,4 +1,7 @@
 ﻿@using Microsoft.AspNetCore.Identity
 @using WebApp.Areas.Identity
+@using pp.Utility
+@using pp.Models
+@using pp.Models.ViewModels
 @using WebApp.Areas.Identity.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
