--- a/WebApp/Views/_ViewImports.cshtml
+++ b/WebApp/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using WebApp
 @using pp.Models
 @using pp.Models.ViewModels
+@using pp.Utility
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
