--- a/WebApp/Views/Shared/_Layout.cshtml
+++ b/WebApp/Views/Shared/_Layout.cshtml
@@ -33,8 +33,8 @@
                         </li>
                         <! adding category in navbar>
                         
-                        @* @if (User.IsInRole(SD.Role_Admin))
-                        { *@
+                         @if (User.IsInRole(SD.Role_Admin))
+                        { 
                             <li class="nav-item dropdown">
                                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                                     Content Management
@@ -52,7 +52,7 @@
                                     <li><hr class="dropdown-divider"></li>
                                 </ul>
                             </li>
-                       @*  } *@
+                         } 
                         <li class="nav-item">
                             <a class="nav-link" asp-area="Customer" asp-controller="Cart" asp-action="Index">
                                 <i class="bi bi-cart"></i> &nbsp; (0)
